--- a/style.css
+++ b/style.css
@@ -28,10 +28,12 @@ html {
     width: calc(80vh / 8);
     aspect-ratio: 1/1;
     background-position: center;
-    background-size: cover;
+    // background-size: cover;
     cursor: grab;
+    transition: background-size 200ms;
+    background-size: calc(80vh / 8);
 }
 .moving {
     z-index: 10;
-    background-size: 120%;
+    background-size: calc((80vh / 8) + 15%);
 }
