Add starting position highlight and update valid move removal logic

--- a/style.css
+++ b/style.css
@@ -61,3 +61,19 @@ html {
 .valid-move.occupied::after {
 	background-color: rgba(255, 0, 0, 0.3);
 }
+
+.starting-position {
+	position: relative;
+}
+
+.starting-position::after {
+	content: '';
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
+	background-color: rgba(255, 255, 0, 0.2);
+	border-radius: 6px;
+	pointer-events: none;
+}
