Remove console logs

--- a/style.css
+++ b/style.css
@@ -77,3 +77,19 @@ html {
 	border-radius: 6px;
 	pointer-events: none;
 }
+
+.right-click-highlight {
+	position: relative;
+}
+
+.right-click-highlight::after {
+	content: '';
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
+	background-color: rgba(255, 0, 0, 0.3);
+	border-radius: 6px;
+	pointer-events: none;
+}
