Changed red color

--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ html {
 	left: 0px;
 	right: 0px;
 	bottom: 0px;
-	background-color: rgba(255, 0, 0, 0.3);
+	background-color: rgb(174, 65, 65);
 	border-radius: 6px;
 	pointer-events: none;
 }
