--- a/style.css
+++ b/style.css
@@ -59,7 +59,10 @@ html {
 }
 
 .valid-move.occupied::after {
-	background-color: rgba(255, 0, 0, 0.3);
+	box-shadow: inset 0 0 0 10px rgba(96, 105, 138, 0.1);
+	background-color: transparent;
+	width: 100%;
+	height: 100%;
 }
 
 .starting-position {
